[package]
name = "vpnmessaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.3"
qprov = { git = "https://github.com/asakhar/qprov.git" }
serde = { version = "1.0.160", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
openssl = "0.10.48"
mio = { version = "*", features = ["net", "os-poll"] }
lazy_static = "1.4.0"